*Empty MediaWiki Message*

--- a/Eesti_lorilaul:_antoloogia.mw
+++ b/Eesti_lorilaul:_antoloogia.mw
@@ -1,4 +1,4 @@
-'''"Eesti lorialul: antoloogia"''' om duo [[Pet & Korsten]] [[albom]], kon om 23 lorilaulu, noist üts ("Suur rõõmupäiv") om [[Võro kiil|võrokeeline]] vahtsõmp rahvalaul. Albom om ilmunuq 1998. aastagal kaseti ja 1999. aastagal lasõrtsõõri pääl. 
+'''"Eesti lorialul: antoloogia"''' om duo [[Pets & Korsten]] [[albom]], kon om 23 lorilaulu, noist üts ("Suur rõõmupäiv") om [[Võro kiil|võrokeeline]] vahtsõmp rahvalaul. Albom om ilmunuq 1998. aastagal kaseti ja 1999. aastagal lasõrtsõõri pääl. 
 
 ==Lauluq==
 
