--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -25,7 +25,7 @@ Sagõhõhe om olnuq nii, õt mõlapäävä satas vihma. Om sääne ütelüs, õt
 * "Seto kodu lugu", Greif, 1999
 * "Vaga Mõla Onufri mälestuspäev", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnü Raudoja Ahto ja Mekäläineni Tapio
 == Võrgost ==
-* http://www.setoturism.ee/?lang=est&m1=33&m2=38&obj=21
+* [http://www.setoturism.ee/?lang=est&m1=33&m2=38&obj=21 Mõlapääväst "Setomaa Turismi" kodolehe pääl]
 * http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D1%8B
-* http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143
-* [http://www.setomaa.ee/index.php?id=979d472a84804b9f647bc185a877a8b5Hõrna Maarja kirotus "Nii kavva ku mäletä, olõmi õks Mõlapääväl käünü'" aoleheh "Setomaa", 3. põimukuu pääväl 2006, lk 7]
+* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemistegaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq rahvusringhäälingulõq]
+* [http://www.setomaa.ee/index.php?id=979d472a84804b9f647bc185a877a8b5 Hõrna Maarja kirotus "Nii kavva ku mäletä, olõmi õks Mõlapääväl käünü'" aoleheh "Setomaa" nr 7, 3. põimukuu pääväl 2006, lk 7]
