*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,17 +1,17 @@
-= Jakapäiv =
-Jakapäiv vai iljapäiv om 2. rehekuu (mädäkuu, lõikuskuu) pääväl, kolq täüt nädälit päält piitrepäivä ja viis üüdpäivä inne annõpäivä.<br />
+[[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi]]
+Jakapäiv vai iljapäiv om vana kalendri 2. rehekuu (mädäkuu, lõikuskuu) pääväl (vahtsõ kalendri perrä 20. hainakuu pääväl), kolq täüt nädälit päält piitrepäivä ja viis üüdpäivä inne annõpäivä.<br />
 Taa om pühä prohvõt' Eelijä (sl k ''Илия'', kr k ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult Setomaal ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.
 == Koh peetäs ==
-Küläpraasnikit ja tsässonapühhi peetäs vai om peet Luhamaal, Ungavitsah, Krohovah, Lõtinah, Koss'olkah, Vohinah, Bolkovah, Molnigah, Pitalovah, Konetskih, Krasnagoorah, Luki Kupeelitsah, Metkavitsah, Parkanuvah, Podgramjeh, Ragosinah, Rääsolaanõh, Sokolovah, Suurõ-Vidovitsah, Tias'sil, Väiko-Vidovitsah.
+Küläpraasnikit ja tsässonapühhi peetäs vai om peet Luhamaal, Ungavitsah, Krohovah, Lõtinah, Koss'olkah, Vohinah, Bolkovah, Molnigah, Pitalovah, Konetskih, Krasnagoorah, Luki Kupeelitsah, Metkavitsah, Parkanuvah, Podgramjeh, Ragosinah, Rääsolaanõh, Sokolovah, Suurõ-Vidovitsah, Väiko-Vidovitsah, Tias'sil, Lebedih, Trubal ja Tavidakondsah.
 == Kuis peetäs ==
-Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiq-kiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. "Ilja om pikse peremiis", nii kõnõldas. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümehebäst.<br />
+Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiq-kiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
 Ungavitsah om jakapäivä nelli päivä peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
 Jakapäävä om Ungavisah õks kirmas olnuq. Sis tull'eq sinnäq kokko umatsõq ja hõimolisõq. Praasnikut peeti Ungavitsa mäe pääl. Tuu om korgõ illos kotus õkva Ut'sa järve otsah - olõ-õi kavvõh Petseri-Pihkva suurtiist, veid'okõsõ maad Ungavitsa käänätüsest külä poolõ.<br />
 Minevä aastagasaa 90-ndide algusõh, ku setodõ hindätiidmine nõsõma naas', sai kirmasõst ummamuudu Ungavitsa külä  ja perridõ kokkotulõk. Tuulaigo setodõl viil umma lippu olõ-õs, pito peeti Eesti sini-must-valgõ all. Rahvast kogohu pall'o, tutvit ni sugulaisi tull' ka Eestimaa kavvõbist kotusist.<br />
 Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eesti-Vinne piirikontroll kimmäbäst läts', kahani ka kirmas. Noq om külägi piaaigu arq häädünüq.
 == Uskmisõq ==
 * Ku jakapäivä pühitse-ei, sis pikseh lüü palama, tap tüütegija, räüss rik rüä.
-* Jakapääväst pääle nakas suvõlõun taganõma ja vesi järveh jahtuma.
+* Jakapääväst pääle nakas suvõlõõnõh taganõma ja vesi järveh jahtuma.
 * Jakapäävä tohi-iq kapstaaiah kävvüq, selle õt tuu mut'utas kapstapäie luumist.
 * Tuul aigo, ku inemiseq oll'eq kerigu man, käve jakab kapstih ja käänd' kapstapäid. (Rõugõ kihlkund)
 * Jakapääväst pääle kaosõq parmuq võso veerest.
@@ -27,29 +27,29 @@ Vislapuu Ode Setomaalt om kõnõlnuq niimuudu.<br />
 ''Jakapääväst käänüs suvi joq sügüsehe.<br />
 ''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”'' (http://www.folklore.ee/setukirss/?andmebaas=list).
 == Prohvõt' Eelijä kotsilõ Piiblih ==
-Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu puul. Tä oll' tasanõ miis ja elli lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs heebreä keeleh "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
+Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu puul. Tä elli kasinat ja lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs heebreä keeleh "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
 === Mõnõq Eelijä imeteoq: ===
-* Prohvõt' Eelijä pand' pallõldõh taiva kinni ja vihma sata-as tuustsaad'k kolq ja puul aastakka.<br />
+* Prohvõt' Eelijä pand' ummi palvidõgaq taiva kinni ja vihma sata-as tuustsaad'k kolq ja puul aastakka.<br />
 :'''''Prohvõt't Eelijä kuulutas ette põvvaaigo.'''''
-:''1Thesbelanõ Eelijä, Gileadi Thesbest, ütel' Ahabilõ: "Ni tõtõtõstõ ku eläs Issänd, Iisraeli Jummal', kink iih maq saisa: njoil aastagil olõ-õi kastõt õgaq vihma muido ku mqu sõnno pääle!"''
-* Kuq prohvõt' Eelijä kõrbõh käküssih oll', sis tõieq kaarnaq tälle leibä süvväq.
+:''<sup>1</sup>Thesbelanõ Eelijä, Gileadi Thesbest, ütel' Ahabilõ: "Ni tõtõtõstõ ku eläs Issänd, Iisraeli Jummal', kink iih maq saisa: njoil aastagil olõ-õi kastõt õgaq vihma muido ku muq sõnno pääle!"''
+* Kuq prohvõt' Eelijä kõrbõh käküssih oll', sis tõieq tsirguq tälle leibä süvväq.
 * Prohvõt' Eelijä tekk' väikost kogosõst hulga jauhõ ja õlli, tenost läsele, kiäq oll' tälle päävarjo andnuq.
 * Prohvõt' Eelijä kuts' Karmeli mäe pääl taivast tulõkeeleq, miäq palodiq timä ohvri inemiisi silmi all arq, a võlss'jumalatiinjidõ ohvri jätiq vasta võtmaldaq.
-* Prohvõt' Eelijä hukas' 450 võlss'prohvõtit, kiäq kummardiq puusliid ja essüdiq inemisi.
+* Prohvõt' Eelijä hukas' 450 võlss'prohvõtit, kiäq kummardiq puusliid ja essüdiq inemiisi.
 * Prohvõt' Eelijä võt' süüki vasta ingli hindä käest ni astõ peräh tuud 40 üüpäivä järgepiteh.
-* Ja peräkõrra, 895. aastagal inne Kristust, tuusama rehk', ku tä uma jungri Eliisaga jutõl', haarõti Eelijä kõrragaq palavahe vankrihe ja viidi taivahe.
+* Ja peräkõrra, 895. aastagal inne Kristust, tuusama rehk', ku tä uma jungri Eliisaga jutõl', haarõti Eelijä palama läügähtünüq vankrihe ja viidi taivahe.
 == Jakapäiv kerigukalendrih ==
-Tuul pääväl, ku piiblisõnno perrä Pühä Eelijä tulidsõ kaarigugaq taivahe sõit', pühitsedäskiq prohvõt' Eelijä pühhä (2. rehekuu päiv). Tüüd olõ-õs lubat tetäq, muido või Pähä Eelijä pahatsõst saiaq.<br />
-Prohvõt' Eelijät pallõldas põvva aigo, õt tulõsiq vihma. A ku vihma oll' veigaq kavva ja pll'o sadanuq, sis pallõldi timmä, õt vihm järgi jääsiq.<br />
+Tuul pääväl, ku piiblisõnno perrä Pühä Eelijä tulitsidõ rattidõgaq taivahe sõit', pühitsedäskiq prohvõt' Eelijä pühhä (vana kalendri 2. rehekuu päiv). Tüüd olõ-õs lubat tetäq, muido või Pähä Eelijä pahatsõst saiaq.<br />
+Prohvõt' Eelijät pallõldas põvva aigo, õt tulõsiq vihma. A ku vihma oll' veigaq kavva ja pll'o sadanuq, sis pallõldi Eelijät, õt vihm järgi jääsiq.<br />
 Pühä Eelijä käest om pallõld kaidsõt kaq pikse iist.<br />
 Vanast oll' Vahtsõliina lähkoh Miikse külä man puu, kohe pikseh sisse lei. Taa puu oll' rahva siäh au seeh. Timäst müüdä minneh kummardõdi ja pallõldi:
 :''"Pühä Pikne!
 :''Hoiaq es' Jumala viha iist ja vitsa iist!''
 :''Hoiaq kõõ kur'a iist, tüü iist ja teo iist!''
 :''Suur Jummal', saadaq meid heldüsega edesi!"''
-Seto kombih ommaq segähünüq Vana Tõstamendi prohvõdi Eelijä ja Vahtsõ Tõstamendi apostli Jaakobusõ mälehtüspäiv vai jakapäiv. Iljapäivä peeti innep Petserimaa hummogunulgõh, a jakapäivä õdagunulgõh. Naid pühhi lahotas õnnõ üts päiv.
+Seto kombih ommaq segähünüq Vana Testamendi prohvõdi Eelijä ja Vahtsõ Testamendi apostli Jaakobusõ mälehtüspäiv vai jakapäiv. Tuu om nii selle, õt naidõ pühhi aolinõ vaheq om veigaq väikene. Iljapäivä peeti innep Petserimaa hummogunulgõh, a jakapäivä õdagunulgõh.
 == Prohvõt' Eelijä perrä pantuq nimeq ==
-Vana Tõstamendi kõkõ kuulsaba prohvõdi Eelijä perrä om Lõunõ-Eestih latsilõ nimest pant vinne nimest Ilja perit Hillo, Illis, Iljo ja Illo.
+Vana Testamendi kõkõ kuulsaba prohvõdi Eelijä perrä om Lõunõ-Eestih latsilõ nimest pant vinne nimest Ilja perit Hillo, Illis, Iljo ja Illo.
 == Jakapäävä söögiq ==
 === Kapstaleib ===
 Taa om suur kapstapiirak.<br />
@@ -57,8 +57,8 @@ Pandaq hapund kapstast rüäleevä kohetusõ sisse, vägevä liha tükke pääle
 Kapstaleibä pidi 4 tunni ahoh hoitma.<br />
 Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 === Seenekotletiq ===
-300 g soolasiini, 200 g ts'algotet tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 munna, tsitroni- ja valgõt pipõrd, riivit saia.<br />
-Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn' saistaq. Höörütäq kotlõtid, püperdäq riivit saia seeh. Kütsäq.
+300 g soolasiini, 200 g ts'algotõt tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 munna, tsitroni- ja valgõt pipõrd, riivit saia.<br />
+Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn'kõnõ saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
 == Trüküstõst ==
 * "Püha prohvet Eelija mälestuspäev ehk ''iljapäiv''", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnü Raudoja Ahto ja Mekäläineni Tapio
 * "Jaagupipäev", raamaduh "Rahvakelendri pühi", Kirjastus Ilo, 2005, Lääne (Lään) Christina
