--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -12,7 +12,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Palu_Jaan]]. [[Pruukja:Amyk|Amyk]] ([[Pruukja arotus:Amyk|arotus]])
 * [[Kivisild (Tarto)]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
 * [[Oksaneni Sofi]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
-* ..
+* [[Mõlapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * ..
 
 
