*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,10 +1,11 @@
-[[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi]]
-Jakapäiv vai iljapäiv om vana kalendri 2. rehekuu (mädäkuu, lõikuskuu) pääväl (vahtsõ kalendri perrä 20. hainakuu pääväl), kolq täüt nädälit päält piitrepäivä ja viis üüdpäivä inne annõpäivä.<br />
-Taa om pühä prohvõt' Eelijä (sl k ''Илия'', kr k ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult Setomaal ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.
+[[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
+'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri 2. rehekuu (mädäkuu, lõikuskuu) pääväl (vahtsõ kalendri perrä 20. hainakuu pääväl), kolq täüt nädälit päält [[piitrepäiv|piitrepäivä]] ja viis üüdpäivä inne [[annõpäiv|annõpäivä]].<br />
+Taa om pühä prohvõt' Eelijä (sl k ''Илия'', kr k ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa|Setomaal]] ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
+Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].
 == Koh peetäs ==
 Küläpraasnikit ja tsässonapühhi peetäs vai om peet Luhamaal, Ungavitsah, Krohovah, Lõtinah, Koss'olkah, Vohinah, Bolkovah, Molnigah, Pitalovah, Konetskih, Krasnagoorah, Luki Kupeelitsah, Metkavitsah, Parkanuvah, Podgramjeh, Ragosinah, Rääsolaanõh, Sokolovah, Suurõ-Vidovitsah, Väiko-Vidovitsah, Tias'sil, Lebedih, Trubal ja Tavidakondsah.
 == Kuis peetäs ==
-Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiq-kiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
+Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiqkiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
 Ungavitsah om jakapäivä nelli päivä peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
 Jakapäävä om Ungavisah õks kirmas olnuq. Sis tull'eq sinnäq kokko umatsõq ja hõimolisõq. Praasnikut peeti Ungavitsa mäe pääl. Tuu om korgõ illos kotus õkva Ut'sa järve otsah - olõ-õi kavvõh Petseri-Pihkva suurtiist, veid'okõsõ maad Ungavitsa käänätüsest külä poolõ.<br />
 Minevä aastagasaa 90-ndide algusõh, ku setodõ hindätiidmine nõsõma naas', sai kirmasõst ummamuudu Ungavitsa külä  ja perridõ kokkotulõk. Tuulaigo setodõl viil umma lippu olõ-õs, pito peeti Eesti sini-must-valgõ all. Rahvast kogohu pall'o, tutvit ni sugulaisi tull' ka Eestimaa kavvõbist kotusist.<br />
@@ -32,7 +33,7 @@ Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu p
 * Prohvõt' Eelijä pand' ummi palvidõgaq taiva kinni ja vihma sata-as tuustsaad'k kolq ja puul aastakka.<br />
 :'''''Prohvõt't Eelijä kuulutas ette põvvaaigo.'''''
 :''<sup>1</sup>Thesbelanõ Eelijä, Gileadi Thesbest, ütel' Ahabilõ: "Ni tõtõtõstõ ku eläs Issänd, Iisraeli Jummal', kink iih maq saisa: njoil aastagil olõ-õi kastõt õgaq vihma muido ku muq sõnno pääle!"''
-* Kuq prohvõt' Eelijä kõrbõh käküssih oll', sis tõieq tsirguq tälle leibä süvväq.
+* Ku prohvõt' Eelijä kõrbõh käküssih oll', sis tõieq tsirguq tälle leibä süvväq.
 * Prohvõt' Eelijä tekk' väikost kogosõst hulga jauhõ ja õlli, tenost läsele, kiäq oll' tälle päävarjo andnuq.
 * Prohvõt' Eelijä kuts' Karmeli mäe pääl taivast tulõkeeleq, miäq palodiq timä ohvri inemiisi silmi all arq, a võlss'jumalatiinjidõ ohvri jätiq vasta võtmaldaq.
 * Prohvõt' Eelijä hukas' 450 võlss'prohvõtit, kiäq kummardiq puusliid ja essüdiq inemiisi.
@@ -65,9 +66,9 @@ Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st
 * Seenekotlete tegemisoppus aolehest "Valgamaalane" 23.01.2007
 * Piibli
 == Võrgost ==
-* http://www.folklore.ee
-* http://et.wikipedia.org/wiki/Elias
-* http://setoturism.ee
-* http://www.polvamaa.ee/public/files/setu_rahvakalender_ja_kulinaariaparand.pdf
-* http://www.evm.ee/id/239/
-* http://ru.wikipedia.org/wiki/Ильин_
+* [http://www.folklore.ee Uskmiisi ja jutussidõ teedüskogoq]
+* [http://et.wikipedia.org/wiki/Elias Eeliäs inglüskiilseh vikipeediäh]
+* [http://setoturism.ee/?lang=est&m1=33&m2=38&obj=14 Jakapääväst "Setomaa turismi" kodolehe pääl]
+* [http://www.polvamaa.ee/public/files/setu_rahvakalender_ja_kulinaariaparand.pdf Seto rahvakalendri ja rahvussöögiq]
+* [http://www.evm.ee/id/239/ Eesti Vabaõhumuuseumi rahvakalendri]
+* [http://ru.wikipedia.org/wiki/%D0%98%D0%BB%D1%8C%D0%B8%D0%BD_%D0%B4%D0%B5%D0%BD%D1%8C Jakapäävä kotsilõ vinnekiilseh vikipeediäh]
