*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,5 +1,5 @@
 [[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
-'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri 2. rehekuu (mädäkuu, lõikuskuu) pääväl (vahtsõ kalendri perrä 20. hainakuu pääväl), kolq täüt nädälit päält [[piitrepäiv|piitrepäivä]] ja viis üüdpäivä inne [[annõpäiv|annõpäivä]].<br />
+'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. rehekuu päiv|2. rehekuu (mädäkuu, lõikuskuu) pääväl]] (vahtsõ kalendri perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv|piitrepäivä]] ja viis üüdpäivä inne [[annõpäiv|annõpäivä]].<br />
 Taa om pühä prohvõt' Eelijä (sl k ''Илия'', kr k ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa|Setomaal]] ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
 Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].
 == Koh peetäs ==
@@ -26,7 +26,7 @@ Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eest
 == Jakapääväst Vislapuu Ode perrä ==
 Vislapuu Ode Setomaalt om kõnõlnuq niimuudu.<br />
 ''Jakapääväst käänüs suvi joq sügüsehe.<br />
-''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”'' (http://www.folklore.ee/setukirss/?andmebaas=list).
+''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”''.<ref>Kirsi Ello üles kirotõduq seto inemiisi jutussõq [http://www.folklore.ee/setukirss/?andmebaas=list]</ref>
 == Prohvõt' Eelijä kotsilõ Piiblih ==
 Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu puul. Tä elli kasinat ja lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs heebreä keeleh "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
 === Mõnõq Eelijä imeteoq: ===
@@ -72,3 +72,5 @@ Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st
 * [http://www.polvamaa.ee/public/files/setu_rahvakalender_ja_kulinaariaparand.pdf Seto rahvakalendri ja rahvussöögiq]
 * [http://www.evm.ee/id/239/ Eesti Vabaõhumuuseumi rahvakalendri]
 * [http://ru.wikipedia.org/wiki/%D0%98%D0%BB%D1%8C%D0%B8%D0%BD_%D0%B4%D0%B5%D0%BD%D1%8C Jakapäävä kotsilõ vinnekiilseh vikipeediäh]
+== Lätteq ==
+<references>
