*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,7 +1,7 @@
 [[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
 '''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. rehekuu päiv|2. rehekuu (mädäkuu, lõikuskuu) pääväl]] (vahtsõ kalendri perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv|piitrepäivä]] ja viis üüdpäivä inne [[annõpäiv|annõpäivä]].<br />
-Taa om pühä prohvõt' Eelijä (sl k ''Илия'', kr k ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa|Setomaal]] ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
-Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].
+Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa|Setomaal]] ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
+Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
 == Koh peetäs ==
 Küläpraasnikit ja tsässonapühhi peetäs vai om peet Luhamaal, Ungavitsah, Krohovah, Lõtinah, Koss'olkah, Vohinah, Bolkovah, Molnigah, Pitalovah, Konetskih, Krasnagoorah, Luki Kupeelitsah, Metkavitsah, Parkanuvah, Podgramjeh, Ragosinah, Rääsolaanõh, Sokolovah, Suurõ-Vidovitsah, Väiko-Vidovitsah, Tias'sil, Lebedih, Trubal ja Tavidakondsah.
 == Kuis peetäs ==
@@ -26,7 +26,7 @@ Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eest
 == Jakapääväst Vislapuu Ode perrä ==
 Vislapuu Ode Setomaalt om kõnõlnuq niimuudu.<br />
 ''Jakapääväst käänüs suvi joq sügüsehe.<br />
-''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”''.<ref>Kirsi Ello üles kirotõduq seto inemiisi jutussõq [http://www.folklore.ee/setukirss/?andmebaas=list]</ref>
+''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”''.<ref>Kirsi Ello üles kirotõduq seto inemiisi jutusõq [http://www.folklore.ee/setukirss/?andmebaas=list]</ref>
 == Prohvõt' Eelijä kotsilõ Piiblih ==
 Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu puul. Tä elli kasinat ja lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs heebreä keeleh "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
 === Mõnõq Eelijä imeteoq: ===
@@ -60,7 +60,7 @@ Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 === Seenekotletiq ===
 300 g soolasiini, 200 g ts'algotõt tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 munna, tsitroni- ja valgõt pipõrd, riivit saia.<br />
 Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn'kõnõ saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
-== Trüküstõst ==
+== Trüküssist ==
 * "Püha prohvet Eelija mälestuspäev ehk ''iljapäiv''", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnü Raudoja Ahto ja Mekäläineni Tapio
 * "Jaagupipäev", raamaduh "Rahvakelendri pühi", Kirjastus Ilo, 2005, Lääne (Lään) Christina
 * Seenekotlete tegemisoppus aolehest "Valgamaalane" 23.01.2007
@@ -70,7 +70,7 @@ Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st
 * [http://et.wikipedia.org/wiki/Elias Eeliäs inglüskiilseh vikipeediäh]
 * [http://setoturism.ee/?lang=est&m1=33&m2=38&obj=14 Jakapääväst "Setomaa turismi" kodolehe pääl]
 * [http://www.polvamaa.ee/public/files/setu_rahvakalender_ja_kulinaariaparand.pdf Seto rahvakalendri ja rahvussöögiq]
-* [http://www.evm.ee/id/239/ Eesti Vabaõhumuuseumi rahvakalendri]
+* [http://www.evm.ee/id/239/ "Eesti Vabaõhumuusõumi" rahvakalendri]
 * [http://ru.wikipedia.org/wiki/%D0%98%D0%BB%D1%8C%D0%B8%D0%BD_%D0%B4%D0%B5%D0%BD%D1%8C Jakapäävä kotsilõ vinnekiilseh vikipeediäh]
 == Lätteq ==
 <references>
