*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,15 +1,16 @@
 [[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
-'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. rehekuu päiv|2. rehekuu (mädäkuu, lõikuskuu) pääväl]] (vahtsõ kalendri perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv|piitrepäivä]] ja viis üüdpäivä inne [[annõpäiv|annõpäivä]].<br />
-Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa|Setomaal]] ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
+'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. rehekuu päiv|2. rehekuu (mädäkuu, lõikuskuu) pääväl]] (vahtsõ kalendri perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
+Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa]]l ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
 Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
 == Koh peetäs ==
-Küläpraasnikit ja tsässonapühhi peetäs vai om peet Luhamaal, Ungavitsah, Krohovah, Lõtinah, Koss'olkah, Vohinah, Bolkovah, Molnigah, Pitalovah, Konetskih, Krasnagoorah, Luki Kupeelitsah, Metkavitsah, Parkanuvah, Podgramjeh, Ragosinah, Rääsolaanõh, Sokolovah, Suurõ-Vidovitsah, Väiko-Vidovitsah, Tias'sil, Lebedih, Trubal ja Tavidakondsah.
+Küläpraasnikit ja tsässonapühhi peetäs vai om peet [[Luhamaa]]l, [[Ungavitsa]]h, [[Krohova]]h, [[Lõtina]]h, [[Koss'olka]]h, [[Vohina]]h, [[Bolkova]]h, [[Molniga]]h, [[Pitalova]]h, [[Konetski]]h, [[Krasnagoora]]h, [[Luki Kupeelitsa]]h, [[Metkavitsa]]h, [[Parkanuva]]h, [[Podgramjeh]], [[Ragosina]]h, [[Rääsolaanõ]]h, [[Sokoluva|Sokolovah]], [[Suurõ-Vidovitsa]]h, [[Väiko-Vidovitsa]]h, [[Teastõ|Tias'sil]], [[Lebedi]]h, [[Truba]]l ja [[Tavidakondsa]]h.
 == Kuis peetäs ==
 Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiqkiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
-Ungavitsah om jakapäivä nelli päivä peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
+'''Ungavitsah''' om jakapäivä nelli päivä peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
 Jakapäävä om Ungavisah õks kirmas olnuq. Sis tull'eq sinnäq kokko umatsõq ja hõimolisõq. Praasnikut peeti Ungavitsa mäe pääl. Tuu om korgõ illos kotus õkva Ut'sa järve otsah - olõ-õi kavvõh Petseri-Pihkva suurtiist, veid'okõsõ maad Ungavitsa käänätüsest külä poolõ.<br />
 Minevä aastagasaa 90-ndide algusõh, ku setodõ hindätiidmine nõsõma naas', sai kirmasõst ummamuudu Ungavitsa külä  ja perridõ kokkotulõk. Tuulaigo setodõl viil umma lippu olõ-õs, pito peeti Eesti sini-must-valgõ all. Rahvast kogohu pall'o, tutvit ni sugulaisi tull' ka Eestimaa kavvõbist kotusist.<br />
-Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eesti-Vinne piirikontroll kimmäbäst läts', kahani ka kirmas. Noq om külägi piaaigu arq häädünüq.
+Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eesti-Vinne piirikontroll kimmäbäst läts', kahani ka kirmas. Noq om külägi piaaigu arq häädünüq.<br />
+'''Lebedi küläh''' om kirmas jakapäävä edimädsel pühäl, '''Trubal''' tõõsõl pühäl, '''Tavidakondsah''' kolmmandal pühäl.<ref>"Eliapäev (20. VII)", raamaduh "Eesti rahvakalender" IV, "Eesti Raamat", 1985, kokko säädnü Hiiemäe Mall</ref> 
 == Uskmisõq ==
 * Ku jakapäivä pühitse-ei, sis pikseh lüü palama, tap tüütegija, räüss rik rüä.
 * Jakapääväst pääle nakas suvõlõõnõh taganõma ja vesi järveh jahtuma.
